--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <h3><a class="feature__btn" href="shop.html">Shop All Products</a></h3>
 
     <div class="feature__grid">
-      <div class="row row-cols-3 ">
+      <div class="row row-cols-sm-1 row-cols-md-3">
         <div class="col mb-4 d-flex justify-content-center">
           <div class="card" style="width: 18rem;">
             <img src="https://i.pinimg.com/736x/c5/43/44/c54344266abdffb554c368a2277fe53e.jpg" class="card-img-top card__custom" alt="...">
