--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,9 @@
   <link rel="stylesheet"  href="css/hdr.css">
   <link rel="stylesheet"  href="css/feature.css">
   <link rel="stylesheet"  href="css/card-custom.css">
+  <link rel="stylesheet"  href="css/contact.css">
 
-  <title>About Us | The Senecio Shop</title>
+  <title>Contact Us |The Senecio Shop</title>
 </head>
 <body>
   
@@ -33,7 +34,7 @@
 
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active nav--secondary mx-4" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link nav--secondary mx-4" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link nav--secondary mx-4" href="shop.html">Shop</a>
@@ -52,7 +53,7 @@
           <a class="nav-link nav--secondary mx-4" href="about.html">Our Story</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav--secondary mx-4" href="contact.html">Contact Us</a>
+          <a class="nav-link  active nav--secondary mx-4" href="contact.html">Contact Us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link nav--secondary mx-4" href="cart.html">Cart</a>
@@ -61,15 +62,31 @@
     </div>
   </nav>
 
-  <header class="hdr hdr--small d-flex justify-content-center align-items-center">
-    <h1 class="hdr__text"> Our Story...</h1>
-  </header>
+  <main class="contact">
+    <h1>How Can We Help?</h1>
+    <h3>Email us: senecio_shop@plant.com.au</h3>
+    <h3>Or</h3>
+    <h3 >Give us a call: 1-800-000-0000 </h3>
+    <h3>Monday - Friday 9 AM - 9 AM PST</h3>
+    <h3>Or</h3>
+    <h3>Get In Touch:</h3>
 
-  <main>
-  <h2 class="text-center">Who are we?</h2>
-  <p class="text-center">This is who we are.</p>
-  <h2 class="text-center">What we do?</h2>
-  <p class="text-center"> This is what we do.</p>
+    <form class="contact__form">
+        <div>
+          <label class="contact__label" for="email">Email address:</label>
+          <input class="contact__input" type="email" id="email" aria-describedby="emailHelp" placeholder="Enter Email" required>
+        </div>
+        <div>
+          <label class="contact__label" for="subject">Subject:</label>
+          <input class="contact__input" type="email" id="text" aria-describedby="emailHelp" placeholder="" required>
+        </div>
+        <div>
+          <label class="contact__label" for="text">Message</label>
+          <textarea class="contact__input" id="text" rows="3" placeholder="Tell us more about your inquiry!" required></textarea>
+        </div>
+      <button type="submit" class="feature__btn">Submit</button>
+    </form>
+
   </main>
 
 
